<resources>
    <string name="app_name" translatable="false">MCPing</string>
    <string name="app_description">Stay in sync with your favorites.</string>

    <string name="title_home">Home</string>
    <string name="title_discovery">Discovery</string>
    <string name="title_settings">Settings</string>
    <string name="title_add_server">Add a new server</string>
    <string name="title_confirm_delete">Confirm delete</string>

    <string name="dialog_delete">Are you sure you want to remove this server? It will be lost forever! (A long time!)</string>
    <string name="dialog_illegal_concurrency_number">The concurrency number cannot be an unnatural number. Please check again.</string>

    <string name="home_title">Servers</string>
    <string name="server_sheet_copy_icon">Copy server icon to Clipboard</string>

    <string name="server_address">Server address</string>
    <string name="server_display_name">Server display name</string>
    <string name="ignore_srv_redirect">Ignore SRV redirect</string>

    <string name="bummer">Bummer</string>
    <string name="copy">Copy</string>
    <string name="report_bug">Report BUG</string>

    <string name="description_refresh">Refresh</string>
    <string name="description_add_server">Add a new server</string>
    <string name="description_save">Save</string>
    <string name="description_delete">Delete</string>
    <string name="description_share">Share</string>
    <string name="description_latency">Latency</string>
    <string name="description_ping" translatable="false">Ping</string>
    <string name="description_pinging" translatable="false">Pinging…</string>
    <string name="description_online">Online</string>
    <string name="description_version">Version</string>
    <string name="description_untested">Untested</string>
    <string name="description_server_icon">Server icon</string>
    <string name="description_cancel">Cancel</string>
    <string name="description_error_message">Error message</string>
    <string name="description_player">Player</string>
    <string name="description_copy_name">Copy name</string>
    <string name="description_copy_uuid">Copy UUID</string>

    <string name="dns" translatable="false">DNS</string>
    <string name="dns_discovered_system">Detected system DNS servers</string>
    <string name="dns_no_system">No server detected.</string>
    <string name="dns_srv_resolver">SRV resolver</string>
    <string name="dns_srv_resolver_system_api">System API (Android 10+)</string>
    <string name="dns_srv_resolver_compatible">Compatible</string>

    <string name="concurrency">Concurrency</string>
    <string name="max_concurrent_pings">Maximum concurrent pings</string>
    <string name="illegal_concurrency_number">Illegal concurrency number</string>

    <string name="error_occurred">An unexpected error occurred when operating. Please send this to developer for help if you do not know what was happened.</string>
    <string name="error_unknown">Unknown error</string>

    <string name="license">License</string>
</resources>